--- a/app/src/main/res/layout/tela1.xml
+++ b/app/src/main/res/layout/tela1.xml
@@ -6,18 +6,18 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@android:color/background_light">
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="205dp"
-            android:text="TextView"
-            android:textSize="50sp"
-            tools:text="1 tela"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="205dp"
+            android:text="1 tela"
+            android:textSize="50sp" />
     </RelativeLayout>
 
 </LinearLayout>
