--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,17 +9,18 @@
     tools:showIn="@layout/app_bar_main">
     
     <FrameLayout
-        android:layout_width="138dp"
-        android:layout_height="495dp"></FrameLayout>
-    
-    
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/content_frame"
+        android:layout_width="371dp"
+        android:layout_height="487dp"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="173dp"
+            android:layout_height="135dp"
+            android:text="TextView" />
+    </FrameLayout>
+
 
 </android.support.constraint.ConstraintLayout>
