--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,17 +3,21 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/home"
+            android:title="Home" />
+        <item
             android:id="@+id/nav_tela1"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Tela 1" />
+            android:icon="@drawable/qrcode"
+            android:title="Gerador QRcode" />
         <item
             android:id="@+id/nav_tela2"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Tela 2" />
+            android:icon="@drawable/scan"
+            android:title="Leitor QRcode" />
         <item
             android:id="@+id/nav_tela3"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Tela 3" />
+            android:icon="@drawable/question"
+            android:title="Ajuda" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
