--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,7 +16,7 @@
             android:title="Leitor QRcode" />
         <item
             android:id="@+id/nav_tela3"
-            android:icon="@drawable/question"
+            android:icon="@drawable/ajuda"
             android:title="Ajuda" />
         <item
             android:id="@+id/nav_manage"
