--- a/app/src/main/res/layout/tela2.xml
+++ b/app/src/main/res/layout/tela2.xml
@@ -1,23 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.example.silvac.qrcodescanner.MainActivity">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/background_light">
+        android:layout_width="0dp"
+        android:layout_height="119dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="388dp">
 
         <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
+            android:id="@+id/txtResult"
+            android:layout_width="368dp"
             android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="205dp"
-            android:text="2 tela"
-            android:textSize="50sp" />
+            android:layout_marginTop="19dp"
+            android:gravity="center_horizontal"
+             android:text="Mire no QR CODE"
+            android:textSize="20sp"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="390dp" />
     </RelativeLayout>
 
-</LinearLayout>
+    <RelativeLayout
+        android:layout_width="378dp"
+        android:layout_height="376dp"
+        tools:layout_editor_absoluteX="3dp"
+        tools:layout_editor_absoluteY="76dp">
+
+        <SurfaceView
+            android:id="@+id/cameraPreview"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="135dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
+
+</android.support.constraint.ConstraintLayout>
