--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,23 +17,28 @@
         <item
             android:id="@+id/nav_tela3"
             android:icon="@drawable/ajuda"
-            android:title="Ajuda" />
+            android:title="Sobre" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Configurações" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Comunicação">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:id="@+id/nav_tela4"
+                android:icon="@drawable/site"
+                android:title="Site" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_tela5"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="Feedback" />
+            <item
+                android:id="@+id/nav_compartilhar"
+                android:icon="@drawable/ic_menu_share"
+                android:title="Compartilhar" />
+
         </menu>
     </item>
 
