--- a/app/src/main/res/layout/tela2.xml
+++ b/app/src/main/res/layout/tela2.xml
@@ -3,35 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"><![CDATA[
     tools:context="com.example.silvac.qrcodescanner.MainActivity">
 
-    <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_height="119dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="388dp">
-
-        <TextView
-            android:id="@+id/txtResult"
-            android:layout_width="368dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="19dp"
-            android:gravity="center_horizontal"
-             android:text="Mire no QR CODE"
-            android:textSize="20sp"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="390dp" />
-    </RelativeLayout>
+    ]]>
 
     <RelativeLayout
-        android:layout_width="378dp"
-        android:layout_height="376dp"
-        tools:layout_editor_absoluteX="3dp"
-        tools:layout_editor_absoluteY="76dp">
+        android:layout_width="386dp"
+        android:layout_height="512dp"
+        tools:layout_editor_absoluteX="-2dp"
+        tools:layout_editor_absoluteY="-1dp"
+        android:background="@android:color/white">
 
         <SurfaceView
             android:id="@+id/cameraPreview"
@@ -39,8 +21,21 @@
             android:layout_height="300dp"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="135dp"
-            android:layout_alignParentBottom="true"
+            android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mire no QR Code"
+            android:textAlignment="center"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="36dp" />
+
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
