--- a/app/src/main/res/layout/tela5.xml
+++ b/app/src/main/res/layout/tela5.xml
@@ -5,7 +5,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@android:color/background_light">
 
     <!--<android.support.design.widget.TextInputLayout-->
         <!--android:layout_width="wrap_content"-->
