--- a/app/src/main/res/layout/tela1.xml
+++ b/app/src/main/res/layout/tela1.xml
@@ -26,8 +26,6 @@
             android:id="@+id/editText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/textView5"
-            android:layout_centerHorizontal="true"
             android:layout_marginTop="122dp"
             android:ems="10"
             android:hint="Digite Aqui"
@@ -35,7 +33,20 @@
             android:textAlignment="center"
             android:textStyle="italic"
             tools:layout_editor_absoluteX="83dp"
-            tools:layout_editor_absoluteY="16dp" />
+            tools:layout_editor_absoluteY="16dp"
+            android:layout_below="@+id/textView5"
+            android:layout_alignLeft="@+id/textView5"
+            android:layout_alignStart="@+id/textView5" />
+        <ImageButton
+            android:id="@+id/ivAttachment"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/attach_icon"
+            android:layout_marginLeft="11dp"
+            android:layout_marginStart="11dp"
+            android:layout_alignBottom="@+id/editText"
+            android:layout_toRightOf="@+id/editText"
+            android:layout_toEndOf="@+id/editText" />
 
         <TextView
             android:id="@+id/textView5"
@@ -48,6 +59,24 @@
             android:textAlignment="center"
             android:textSize="40sp"
             android:textStyle="bold" />
+        <Button
+            android:id="@+id/btnLoginFtp"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:text="Login to FTP"
+            android:layout_alignBaseline="@+id/btnUploadFile"
+            android:layout_alignBottom="@+id/btnUploadFile"
+            android:layout_toLeftOf="@+id/button"
+            android:layout_toStartOf="@+id/button" />
+        <Button
+            android:id="@+id/btnUploadFile"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:text="Upload file to FTP"
+            android:layout_above="@+id/button"
+            android:layout_alignRight="@+id/textView5"
+            android:layout_alignEnd="@+id/textView5"
+            android:layout_marginBottom="15dp" />
 
         <ImageButton
             android:id="@+id/button"
