--- a/app/src/main/res/layout/tela1.xml
+++ b/app/src/main/res/layout/tela1.xml
@@ -6,9 +6,9 @@
     tools:context="com.example.martinsj.navegationdraw.MainActivity">
 
     <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_height="531dp"
-        android:layout_marginBottom="2dp"
+        android:layout_width="382dp"
+        android:layout_height="535dp"
+        android:layout_marginBottom="-3dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -17,36 +17,47 @@
         android:backgroundTint="@color/zxing_status_text"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1">
+        tools:layout_constraintRight_creator="1"
+        tools:layout_editor_absoluteY="32dp">
 
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="122dp"
-            android:ems="10"
-            android:hint="Digite Aqui"
-            android:inputType="textPersonName"
-            android:textAlignment="center"
-            android:textStyle="italic"
-            tools:layout_editor_absoluteX="83dp"
-            tools:layout_editor_absoluteY="16dp"
-            android:layout_below="@+id/textView5"
-            android:layout_alignLeft="@+id/textView5"
-            android:layout_alignStart="@+id/textView5" />
+        <!--<EditText-->
+        <!--android:id="@+id/editText"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="122dp"-->
+        <!--android:ems="10"-->
+        <!--android:hint="Digite Aqui"-->
+        <!--android:inputType="textPersonName"-->
+        <!--android:textAlignment="center"-->
+        <!--android:textStyle="italic"-->
+        <!--tools:layout_editor_absoluteX="83dp"-->
+        <!--tools:layout_editor_absoluteY="16dp"-->
+        <!--android:layout_below="@+id/textView5"-->
+        <!--android:layout_alignLeft="@+id/textView5"-->
+        <!--android:layout_alignStart="@+id/textView5" />-->
         <ImageButton
             android:id="@+id/ivAttachment"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/attach_icon"
-            android:layout_marginLeft="11dp"
-            android:layout_marginStart="11dp"
-            android:layout_alignBottom="@+id/editText"
-            android:layout_toRightOf="@+id/editText"
-            android:layout_toEndOf="@+id/editText" />
+            android:layout_below="@+id/textView5"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="68dp" />
+        <!--android:layout_alignBottom="@+id/editText"-->
+        <!--android:layout_toRightOf="@+id/editText"-->
+        <!--android:layout_toEndOf="@+id/editText" />-->
+        <TextView
+            android:id="@+id/editText"
+            android:layout_width="350dp"
+            android:layout_height="35dp"
+            android:text=""
+            android:textAlignment="center"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
 
         <TextView
             android:id="@+id/textView5"
@@ -59,24 +70,28 @@
             android:textAlignment="center"
             android:textSize="40sp"
             android:textStyle="bold" />
+
         <Button
             android:id="@+id/btnLoginFtp"
             android:layout_width="100dp"
             android:layout_height="50dp"
-            android:text="Login to FTP"
             android:layout_alignBaseline="@+id/btnUploadFile"
             android:layout_alignBottom="@+id/btnUploadFile"
+            android:layout_alignLeft="@+id/textView5"
+            android:layout_alignStart="@+id/textView5"
             android:layout_toLeftOf="@+id/button"
-            android:layout_toStartOf="@+id/button" />
+            android:layout_toStartOf="@+id/button"
+            android:text="Login to FTP" />
+
         <Button
             android:id="@+id/btnUploadFile"
             android:layout_width="100dp"
             android:layout_height="50dp"
+            android:layout_marginBottom="27dp"
             android:text="Upload file to FTP"
             android:layout_above="@+id/button"
             android:layout_alignRight="@+id/textView5"
-            android:layout_alignEnd="@+id/textView5"
-            android:layout_marginBottom="15dp" />
+            android:layout_alignEnd="@+id/textView5" />
 
         <ImageButton
             android:id="@+id/button"
