--- a/app/src/main/res/layout/activity_qr.xml
+++ b/app/src/main/res/layout/activity_qr.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="531dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="-1dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -18,20 +18,22 @@
         android:backgroundTint="@color/zxing_status_text"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1">>
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="450dp"
             android:layout_height="450dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
             app:srcCompat="@android:drawable/screen_background_light_transparent"
             tools:layout_editor_absoluteX="9dp"
-            tools:layout_editor_absoluteY="143dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            tools:layout_editor_absoluteY="143dp" />
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
